# marmolak-open-vpn-node

./: .env.example  Dockerfile  README.md  docker-compose.yml  openvpn-server.conf  pyproject.toml
backend/config/: config.yaml  docker.yaml
backend/src/openvpn_node.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/vpn_node_core/: __main__.py  config.py  container.py
backend/src/vpn_node_core/core/manager/: api_manager.py
backend/src/vpn_node_core/openvpn_domain/api/v1/: __init__.py  dependency.py  dto.py  router.py
backend/src/vpn_node_core/openvpn_domain/auth/: node_signature.py
backend/src/vpn_node_core/openvpn_domain/domain/: client_certificate.py  commands.py  endpoint_result.py  provision_result.py
backend/src/vpn_node_core/openvpn_domain/service/: easyrsa_service.py  openvpn_manager_service.py  openvpn_status_service.py  ovpn_builder_service.py  server_endpoint_service.py
backend/tests/: test_easyrsa_service.py  test_node_api.py  test_openvpn_status_service.py  test_ovpn_builder_service.py  test_server_endpoint_service.py
scripts/: apply-iran-optimizations.sh  diagnose-pki.sh  fix-docker-pki-mount.sh  fix-easyrsa-host.sh  iran-optimized-server.conf  reload-openvpn-host.sh  setup-easyrsa-host.sh  setup-server-conf-bind.sh
